package com.naranjapina.heat_tourism.data.auth.model

enum class UserRole {
    TOURIST,
    COORDINATOR,
    ADMINISTRATOR
}